--- a/BooksShop/BooksShop/BooksShop.csproj
+++ b/BooksShop/BooksShop/BooksShop.csproj
@@ -6,20 +6,15 @@
 
   <ItemGroup>
     <Content Remove="bundleconfig.json" />
-    <Content Remove="wwwroot\js\jquery-bundle.min.js" />
   </ItemGroup>
 
   <ItemGroup>
-    <_ContentIncludedByDefault Remove="wwwroot\js\jquery-bundle.min.js" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Data\" />
+    <_ContentIncludedByDefault Remove="bundleconfig.json" />
+    <_ContentIncludedByDefault Remove="wwwroot\css\site.min.css" />
   </ItemGroup>
 
   <ItemGroup>
     <None Include="bundleconfig.json" />
-    <None Include="wwwroot\js\jquery-bundle.min.js" />
   </ItemGroup>
 
   <ItemGroup>
