--- a/BooksShop/BooksShop/bundleconfig.json
+++ b/BooksShop/BooksShop/bundleconfig.json
@@ -1,16 +1,8 @@
 [
   {
-    "outputFileName": "wwwroot/lib/jquery/dist/jquery.min.js",
+    "outputFileName": "wwwroot/css/site.min.css",
     "inputFiles": [
-      "wwwroot/lib/jquery/dist/jquery.js"
-    ]
-  },
-  {
-    "outputFileName": "wwwroot/js/jquery-bundle.js",
-    "inputFiles": [
-      "wwwroot/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js",
-      "wwwroot/lib/jquery-validation/dist/jquery.validate.min.js",
-      "wwwroot/lib/jquery/dist/jquery.min.js"
+      "wwwroot/css/site.css"
     ]
   }
 ]
